// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with data 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-62 {
  padding: 12px;
}

.emotion-60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.emotion-59 {
  border-spacing: 0;
}

.emotion-59 td {
  height: 32px;
  color: #b3b3b3;
  padding: 8px 16px;
  border: 1px solid transparent;
}

.emotion-18 {
  background-color: #121212;
}

.emotion-1 {
  height: 32px;
  color: #b3b3b3;
  background-color: #2e2e2e;
  padding: 12px 16px;
  border-bottom: 1px solid #4d4948;
}

.emotion-1:not(:last-child) {
  border-right: 1px solid #4d4948;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  background-color: #121212;
  border-spacing: 0;
}

.emotion-24:nth-of-type(2n) {
  background-color: #1d1d1d;
}

.emotion-24:hover {
  background-color: #2e2e2e;
}

.emotion-24:hover td {
  border-spacing: 0;
  border-top: 1px solid #4d4948;
  border-bottom: 1px solid #4d4948;
}

.emotion-24:hover td:first-of-type {
  border-top: 1px solid #4d4948;
  border-left: 1px solid #4d4948;
  border-bottom: 1px solid #4d4948;
}

.emotion-24:hover td:last-of-type {
  border-top: 1px solid #4d4948;
  border-right: 1px solid #4d4948;
  border-bottom: 1px solid #4d4948;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 200px;
}

.emotion-19 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-19:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-19:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-20 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #ce2d3f;
}

.emotion-20:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-20:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-21 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-21:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-21:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #404040;
}

.emotion-22:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-34 {
  color: #4d4948;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a90e2;
}

.emotion-42 {
  color: #4a90e2;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-43 {
  padding-left: 8px;
}

.emotion-55 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-55:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-55:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="emotion-62"
>
  <h2>
    Projects
  </h2>
  <ul>
    <li>
      project-name
    </li>
  </ul>
  <div
    className="emotion-60"
  >
    <table
      className="emotion-59"
    >
      <thead>
        <tr
          className="emotion-18"
        >
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Status
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Job Name
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Created By
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Priority
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Created (Date/Time)
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Failed
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Errors
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              # Assets
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Progress
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              <div
                className="emotion-19"
              />
              <div
                className="emotion-20"
              />
              <div
                className="emotion-21"
              />
              <div
                className="emotion-22"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              <div
                className="emotion-19"
              />
              <div
                className="emotion-20"
              />
              <div
                className="emotion-21"
              />
              <div
                className="emotion-22"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Paused
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090589586
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Canceled
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090536003
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-34"
            >
              Canceled by: admin
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Finished
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570828263275
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570827807692
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            flipbook_export_1
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1564699939781
          </td>
          <td />
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-44"
            >
              <svg
                className="emotion-42"
                data-file-name="generating.svg"
                width={16}
              />
              <div
                className="emotion-43"
              >
                Generating
              </div>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562612024983
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019___
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562611383791
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562172555491
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562117381276
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              49
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              <div
                className="emotion-55"
              />
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <h2>
    UserMenu
  </h2>
  <div
    className="emotion-61"
  >
    <UserMenu
      logout={[Function]}
    />
  </div>
  <h2>
    Pagination
  </h2>
  <Pagination
    currentPage={1}
    legend="Jobs: 1–17 of 415"
    nextLink="/?page=2"
    onClick={[Function]}
    prevLink="/"
    totalPages={2}
  />
</div>
`;

exports[`<Jobs /> should render properly without data 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-62 {
  padding: 12px;
}

.emotion-60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.emotion-59 {
  border-spacing: 0;
}

.emotion-59 td {
  height: 32px;
  color: #b3b3b3;
  padding: 8px 16px;
  border: 1px solid transparent;
}

.emotion-18 {
  background-color: #121212;
}

.emotion-1 {
  height: 32px;
  color: #b3b3b3;
  background-color: #2e2e2e;
  padding: 12px 16px;
  border-bottom: 1px solid #4d4948;
}

.emotion-1:not(:last-child) {
  border-right: 1px solid #4d4948;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  background-color: #121212;
  border-spacing: 0;
}

.emotion-24:nth-of-type(2n) {
  background-color: #1d1d1d;
}

.emotion-24:hover {
  background-color: #2e2e2e;
}

.emotion-24:hover td {
  border-spacing: 0;
  border-top: 1px solid #4d4948;
  border-bottom: 1px solid #4d4948;
}

.emotion-24:hover td:first-of-type {
  border-top: 1px solid #4d4948;
  border-left: 1px solid #4d4948;
  border-bottom: 1px solid #4d4948;
}

.emotion-24:hover td:last-of-type {
  border-top: 1px solid #4d4948;
  border-right: 1px solid #4d4948;
  border-bottom: 1px solid #4d4948;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 200px;
}

.emotion-19 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-19:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-19:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-20 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #ce2d3f;
}

.emotion-20:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-20:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-21 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-21:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-21:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #404040;
}

.emotion-22:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-34 {
  color: #4d4948;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a90e2;
}

.emotion-42 {
  color: #4a90e2;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-43 {
  padding-left: 8px;
}

.emotion-55 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-55:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-55:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="emotion-62"
>
  <h2>
    Projects
  </h2>
  Loading...
  <div
    className="emotion-60"
  >
    <table
      className="emotion-59"
    >
      <thead>
        <tr
          className="emotion-18"
        >
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Status
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Job Name
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Created By
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Priority
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Created (Date/Time)
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Failed
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Errors
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              # Assets
            </div>
          </th>
          <th
            className="emotion-1"
          >
            <div
              className="emotion-0"
            >
              Progress
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              <div
                className="emotion-19"
              />
              <div
                className="emotion-20"
              />
              <div
                className="emotion-21"
              />
              <div
                className="emotion-22"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              <div
                className="emotion-19"
              />
              <div
                className="emotion-20"
              />
              <div
                className="emotion-21"
              />
              <div
                className="emotion-22"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Paused
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090589586
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Canceled
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090536003
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-34"
            >
              Canceled by: admin
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Finished
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570828263275
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570827807692
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            flipbook_export_1
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1564699939781
          </td>
          <td />
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-44"
            >
              <svg
                className="emotion-42"
                data-file-name="generating.svg"
                width={16}
              />
              <div
                className="emotion-43"
              >
                Generating
              </div>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562612024983
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019___
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562611383791
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562172555491
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-24"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562117381276
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              49
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-23"
            >
              <div
                className="emotion-55"
              />
              <div
                className="emotion-20"
              />
              
              
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <h2>
    UserMenu
  </h2>
  <div
    className="emotion-61"
  >
    <UserMenu
      logout={[Function]}
    />
  </div>
  <h2>
    Pagination
  </h2>
  <Pagination
    currentPage={1}
    legend="Jobs: 1–17 of 415"
    nextLink="/?page=2"
    onClick={[Function]}
    prevLink="/"
    totalPages={2}
  />
</div>
`;
